refactor : 클래스 순서 변경과 설명로직 추가 private 메서드 분리